Job Orchestrator/src/objects/JobSchedulerSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <description>Address to which mail  will be sent in case of any errors.</description>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>Purge All the logs Earlier to # of days.</description>
        <inlineHelpText>Purge All the logs Earlier to # of days. Should be in Days.</inlineHelpText>
        <label>Purge Logs Earlier Than</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Frequency in Minutes.</description>
        <inlineHelpText>Should be Integer Only</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JobSchedulerSetting</label>
</CustomObject>